# CStyler

./: .gitignore  CStyler.cabal  Formattier.cabal  LICENSE  README.md  package.yaml  test.txt
app/: Main.hs
src/: Main.hs  Parser.hs
test/: Spec.hs
test/testFolder/1/: test.c
test/testFolder/2/: test.c
testFolder/: test.c
