name:                CStyler
version:             0.1.0.0        
license:             MIT
license-file:        LICENSE
author:              Yan Frimmel
maintainer:          yanfrimmel1411@gmail.com          
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable cstyler
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10, directory
  hs-source-dirs:      src
  ghc-options:         -O2 -threaded -Wall
  default-language:    Haskell2010

-- test-suite Formattier-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , Formattier
--                      , hspec
--                      , QuickCheck
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010